--- a/lead-details.html
+++ b/lead-details.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LeadEase - Lead Details</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/lead-details.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="lead-details.js" defer></script>
 </head>
 <body>
     <header>
