--- a/leads.html
+++ b/leads.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LeadEase - Leads Listing</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/leads.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="leads.js" defer></script>
 </head>
 <body>
     <header>
